Bug 515579 - Qt6: QLineEdit placeholder text miscolored
Summary: Qt6: QLineEdit placeholder text miscolored
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.0.0-beta1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2026-02-05 21:36 UTC by Freya Lupen
Modified: 2026-02-16 09:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Placeholder text color comparisons (9.99 KB, image/png)
2026-02-05 21:36 UTC, Freya Lupen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2026-02-05 21:36:08 UTC
Created attachment 189261 [details]
Placeholder text color comparisons

SUMMARY
The placeholder text in searchbars (resource chooser, preferences, etc) and other QLineEdits is darker than the background on dark themes, making it hard to read.

On light themes it's more readable, but still not as dark as it is on Qt5.

STEPS TO REPRODUCE
1. Switch to a dark theme such as 'Krita dark'.
2. Open the Brush Editor, Settings, etc, and look at the 'Search' placeholder text.

OBSERVED RESULT
'Search' text doesn't contrast the background enough.

EXPECTED RESULT
'Search' text contrasts the background more readably.

SOFTWARE/OS VERSIONS
Krita 6.0.0-beta1

ADDITIONAL INFORMATION
Attachment shows 'Krita bright' and 'Krita dark' themes on Qt6 and Qt5.
On Qt5 the text color is a nearly identical neutral gray in both themes.
Comment 1 Vitamorus 2026-02-14 21:29:59 UTC
This happens to me on my laptop with elementary OS 8 but interestingly not on my desktop PC with KDE neon, both running with 'Qt Platform Name:  "xcb"'.
Comment 2 Bug Janitor Service 2026-02-15 15:19:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2648
Comment 3 Dmitry Kazakov 2026-02-16 09:36:32 UTC
Git commit 98b279469b4a1733b857db397aa6924b426ef5a0 by Dmitry Kazakov, on behalf of Freya Lupen.
Committed on 16/02/2026 at 09:36.
Pushed by dkazakov into branch 'master'.

Qt6: Set PlaceholderText color role

instead of using the broken fallback.
KColorScheme uses InactiveText for this.

M  +1    -0    libs/ui/thememanager.cpp
M  +1    -0    libs/widgetutils/config/kcolorscheme.cpp

https://invent.kde.org/graphics/krita/-/commit/98b279469b4a1733b857db397aa6924b426ef5a0
Comment 4 Dmitry Kazakov 2026-02-16 09:37:55 UTC
Git commit b045dc5c4d60cd16a8e295ae9647fe866a232dcb by Dmitry Kazakov, on behalf of Freya Lupen.
Committed on 16/02/2026 at 09:37.
Pushed by dkazakov into branch 'krita/6.0'.

Qt6: Set PlaceholderText color role

instead of using the broken fallback.
KColorScheme uses InactiveText for this.

M  +1    -0    libs/ui/thememanager.cpp
M  +1    -0    libs/widgetutils/config/kcolorscheme.cpp

https://invent.kde.org/graphics/krita/-/commit/b045dc5c4d60cd16a8e295ae9647fe866a232dcb