Qt6: Set PlaceholderText color role

instead of using the broken fallback.
KColorScheme uses InactiveText for this.

BUG:515579